[package]
name = "nvg-gl"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
keywords = ["nanovg", "opengl"]
description = "NVG Renderer for OpenGL"
license = "MIT"
publish = true
homepage = "https://github.com/sunli829/nvg"
repository = "https://github.com/sunli829/nvg"

[dependencies]
nvg = { version = "0.5.1", path = "../" }
slab = "0.4.2"
gl = "0.14.0"
anyhow = "1.0.26"

[dev-dependencies]
glutin = "0.21.1"
chrono = "0.4.10"
